feat: GetOrders param documentation
